# canis

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONFIG.md  Cargo.toml  DEPENDENCY_REVIEW.md  DEVELOPMENT.md  INSTALL_DEPENDENCIES.md  LICENSE_COMPLIANCE.md  Makefile  README-WORKTREE.md  README.md  ROADMAP.md  SESSION-SUMMARY.md  SESSION_SUMMARY.txt  START_HERE.md  THIRD_PARTY_NOTICES.md  TODO-REVIEW-FIXES.md  UPDATE_CHECKLIST.md  UPDATE_NOW.md  audit.md  code-review-followup-2026-02-04.md  deny.toml  docker-compose.dev.yml  docker-compose.yml  index.html  setup-dev.sh  style.css
.claude/: AGENTS.md
client/src-tauri/: AGENTS.md  Cargo.toml  lld_1%3a10.0-50~exp1_amd64.deb  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/resources/: games.json
client/src-tauri/src/: AGENTS.md  lib.rs  main.rs
server/: AGENTS.md  Cargo.toml  SECURITY.md  setup-db.sh
server/.sqlx/: query-05cd7c6dff0e9f69bb1cfa0c40e06945b126be8b18a52edb84eb750b7e2cdfb5.json  query-13e915167d99bec482369b2783ab450744325e6ce3144f011406520ab54e195c.json  query-21a155639d52f3ecbf7e05662e89d3782153e56f1a044385b0eb3cf31efc06c1.json  query-22bc6e67d5eca008679be104e334b195960ba96cc91bc8faa26d081142dc37a0.json  query-2cbc638fe92e728058807267ffa42f9b0af3a487a7a7749cec2cf7df31229b8c.json  query-30a1e15366d64ae30c7486e6d086aaf76bc454311a11ca6cf8a76044995272e1.json  query-32ebb295731f1a21127a4a77baccef3e8353d494d8cc29cbe88b2f0157ab43e0.json  query-37a7cb2ae5cc473e4a9b3801cb146204f016321e615ea14b7238e0d945967522.json  query-3a8ac4479b08a545b8150d043676d77a541cf58a78ead2ea8977f89e4e74565b.json  query-412c3f0264109d8796a1b5820921a6f4c6029f27c59c3376f472fd2a7df3474b.json  query-45252ecf54a7880823715b14d90311bef635a49b3b30e8a40d6473b8e5397101.json  query-48e18df04ad01d1bbc69a50418d9a75c75d24ae3b8ccfb5d535863b3c551bdfe.json  query-4b79edf3ff19a2bb132148d217b2c1b848e9ed95c292c8a01964d1feb21cd92e.json  query-5c95e763a83d258decfc4aed550fe0dcfcafcbf4b20e0fa11d4a20387487547c.json  query-67239451fef5852f2ef4ca17b542cda1bbfa9a12c13087b6a6602c800c9f8645.json  query-6a0dc299e41aeddb0e788a513de8253c40600eb2fc7ba22bf50a4b6a65918bef.json  query-71b7c9157dd47be0105ac33fa0f684545dab27ef56f8bb512d5abcb07a0c50fb.json  query-9185b18e53bdea8d92992ef6c1f3ff0f80e754260fdd4fe16d8be4b350e0200f.json  query-a92a8729b14559eef65b1ea6d2accc4008098aec427296673266737307c608f5.json  query-afa7d781212a3faad88dce030db0d9a4498b589d7ab4e4536ab5d7be2991259d.json  query-b0827ad8b94a2d798b66c937dee5799e4c781a036cea425161479e99414346eb.json  query-bcc6d74d4dac33cdae2b612289f39980f78f6c4762c14e2232ab672526c3f25d.json  query-bf4b091eaecf1b1551ef90b316ea33bae1bc903148e86ab93f106baf9bdc7dc7.json  query-c61c6b3576c8d59b5386184070173c66f9a9cfb166f9206508ccdd85016c43d3.json  query-c7a90ebde948e1306b2df58781e28e9a61268bc678f11b2de24c173519a65d3c.json  query-c94e14732840af5cb89795aec7b09e00c6fe8eb0bfb0e4dfbd4804e02e1acd51.json  query-cf6c92fff07fb56b7438d594441d76a0d637c59ec882425204599d3f3e6fe5c5.json  query-d756ec45b5123814380517d78217f1e062398be4cc807b8eb54dda216c730c42.json  query-ed678df870c5306b8bb42478128e63efda5041e7120d3c2dcbacd440bd057490.json  query-ee19e11f920db0365fb23fa02c1d1f90bdfdef8ea1c510b5f9bd43361a59036c.json  query-ffa1607d516389bf1205d976178463402312467f7f2d8ab1b8cccd43356699bc.json
server/examples/: hash_password.rs
server/migrations/: 20240102000000_security_improvements.sql  20260113000000_add_dm_read_state.sql  20260113000000_permission_system.sql  20260114000000_guild_invites.sql  20260119000000_e2ee_keys.sql  20260119100000_connection_metrics.sql  20260120000000_add_user_activity.sql  20260120080007_add_user_feature_flags.sql  20260120105255_add_channel_voice_settings.sql  20260123213658_create_user_preferences.sql  20260124100000_create_favorites.sql  20260124150000_reactions_and_emojis.sql  20260125000000_add_message_search.sql  20260127000000_add_channel_read_state.sql  20260129000000_first_user_setup.sql  20260131000000_password_reset_tokens.sql  20260201000000_oidc_providers.sql  20260202000000_user_blocking_and_reports.sql  20260202204100_bot_ecosystem.sql  20260203000000_add_view_channel_permission.sql  20260206000000_message_threads.sql  20260211000000_guild_threads_enabled.sql  20260220000000_webhooks_and_bot_intents.sql  20260224000000_guild_discovery.sql  20260225000000_guild_plan.sql  20260226000000_data_governance.sql  20260226100000_personal_workspaces.sql  20260227000000_digital_library.sql  20260227100000_admin_rls_bypass.sql  20260228000000_command_center_telemetry.sql  20260228000001_command_center_rollups.sql  20260304000000_guild_bans.sql  20260307000000_add_custom_status.sql  20260307100000_preferences_snake_case.sql  20260308000000_discovery_prompt_dismissed.sql  20260308100000_session_geoip.sql  20260309000000_update_max_screen_shares_default.sql  20260310000000_channel_pins.sql
server/src/: AGENTS.md  config.rs  lib.rs  main.rs  openapi.rs  redis_tests.rs  util.rs
server/src/admin/: AGENTS.md  handlers.rs  middleware.rs  mod.rs  observability.rs  types.rs
server/src/api/: AGENTS.md  bots.rs  channel_pins.rs  commands.rs  favorites.rs  global_search.rs  mod.rs  pins.rs  preferences.rs  reactions.rs  settings.rs  setup.rs  unread.rs
server/tests/: admin_elevation_test.rs  admin_reports_test.rs  auth_test.rs  blocking_test.rs  bot_ecosystem_test.rs  bot_intents_test.rs  channel_permissions_test.rs  channels_http_test.rs  connectivity_http_test.rs  dm_http_test.rs  e2ee_keys_test.rs  global_search_http_test.rs  governance_test.rs  guild_invite_test.rs  guild_limits_test.rs  media_processing_test.rs  messages_http_test.rs  oidc_test.rs  pages_test.rs  ratelimit_http_test.rs  ratelimit_test.rs  reports_test.rs  roles_security_test.rs  screenshare_test.rs  search_http_test.rs  search_test.rs  setup_concurrent_http_test.rs  setup_http_test.rs  setup_integration_test.rs  setup_test.rs  threads_test.rs  upload_limits_test.rs  uploads_http_test.rs  voice_sfu_test.rs  webhooks_test.rs  websocket_integration_test.rs  workspaces_test.rs
shared/vc-crypto/: AGENTS.md  Cargo.toml
(+986 files in other folders)
