[workspace]
resolver = "2"
members = [
    "server",
    "client/src-tauri",
    "shared/vc-common",
    "shared/vc-crypto",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourorg/voicechat"
rust-version = "1.82"
authors = ["VoiceChat Contributors"]
description = "Self-hosted voice and text chat platform"
keywords = ["voip", "chat", "webrtc", "e2ee"]
categories = ["multimedia", "network-programming"]

[workspace.dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Web Framework
axum = { version = "0.8", features = ["ws", "multipart", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "request-id", "util"] }

# WebSocket
tokio-tungstenite = "0.28"

# WebRTC
webrtc = "0.11"

# Database
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "runtime-tokio", "uuid", "chrono", "json", "macros", "migrate"] }

# Redis
fred = { version = "10", features = ["i-scripts"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
totp-rs = { version = "5", features = ["gen_secret", "qr", "otpauth"] }
openidconnect = "3"

# Crypto
rustls = { version = "0.23", features = ["ring"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
vodozemac = "0.9"

# Random
rand = "0.8"

# Zeroize
zeroize = { version = "1", features = ["derive"] }

# Utils
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
bytes = "1"
hex = "0.4"
base64 = "0.22"
lazy_static = "1.4"
regex = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# OpenTelemetry
axum-tracing-opentelemetry = { version = "0.28" }
init-tracing-opentelemetry = { version = "0.28" }
opentelemetry = { version = "0.29", features = ["trace"] }
opentelemetry-appender-tracing = { version = "0.29" }
opentelemetry-otlp = { version = "0.29", features = ["tonic", "grpc-tonic", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio", "trace", "metrics", "logs"] }
tracing-opentelemetry = { version = "0.30" }
tracing-opentelemetry-instrumentation-sdk = { version = "0.28" }

# S3
aws-sdk-s3 = { version = "1", default-features = false, features = ["behavior-version-latest", "rustls"] }
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rustls"] }
aws-smithy-async = { version = "1", features = ["rt-tokio"] }

# API Docs
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Markdown
pulldown-cmark = "0.13"

# Bitflags
bitflags = { version = "2.4", features = ["serde"] }

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-native-tls", "smtp-transport", "builder"] }

# Validation
validator = { version = "0.20", features = ["derive"] }

# MIME type detection
mime_guess = "2"
infer = "0.16"

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
blurhash = "0.2"

# String matching
aho-corasick = "1"

# Archive
zip = { version = "2", default-features = false, features = ["deflate"] }

# Lock-free concurrent data structures
dashmap = "6"

# Internal Crates
vc-common = { path = "shared/vc-common" }
vc-crypto = { path = "shared/vc-crypto" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow specific pedantic/nursery lints that are too noisy or stylistic
missing_errors_doc = "allow"
missing_panics_doc = "allow"
unreadable_literal = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
map_unwrap_or = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
struct_field_names = "allow"
must_use_candidate = "allow"
let_underscore_future = "allow"
match_same_arms = "allow"
significant_drop_tightening = "allow"
significant_drop_in_scrutinee = "allow"
option_if_let_else = "allow"
needless_pass_by_value = "allow"
type_complexity = "allow"
non_std_lazy_statics = "allow"
never_loop = "allow"
redundant_closure_for_method_calls = "allow"
unused_async = "allow"
manual_let_else = "allow"
ignore_without_reason = "allow"
needless_collect = "allow"
module_inception = "allow"
unnecessary_wraps = "allow"
explicit_iter_loop = "allow"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3

