[package]
name = "vc-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "VoiceChat Server - Backend for voice and text communication"

[dependencies]
# Internal
vc-common.workspace = true
vc-crypto.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# Web
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio-tungstenite.workspace = true

# WebRTC
webrtc.workspace = true

# Database
sqlx.workspace = true
fred.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Auth
jsonwebtoken.workspace = true
argon2.workspace = true
totp-rs.workspace = true
openidconnect.workspace = true

# Crypto
rustls.workspace = true
sha2.workspace = true
aes-gcm.workspace = true

# Random
rand.workspace = true

# Utils
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true
hex.workspace = true
base64.workspace = true
lazy_static.workspace = true
regex.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# S3
aws-sdk-s3.workspace = true
aws-config.workspace = true

# API
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

# Markdown
pulldown-cmark.workspace = true

# Validation
validator.workspace = true

# MIME detection
mime_guess.workspace = true

# Image format detection
image.workspace = true

# Lock-free concurrent data structures
dashmap.workspace = true

# Bitflags
bitflags.workspace = true

# Config
dotenvy = "0.15"
tokio-util = { version = "0.7.18", features = ["io", "compat"] }

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serial_test = "3.2"

[features]
# Enable test utilities for integration tests
test-utils = []

[lints]
workspace = true

[[bin]]
name = "vc-server"
path = "src/main.rs"
