[package]
name = "vc-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "VoiceChat Server - Backend for voice and text communication"

[dependencies]
# Internal
vc-common.workspace = true
vc-crypto.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# Web
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio-tungstenite.workspace = true

# WebRTC
webrtc.workspace = true

# Database
sqlx.workspace = true
fred.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Auth
jsonwebtoken.workspace = true
argon2.workspace = true
totp-rs.workspace = true
openidconnect.workspace = true

# Crypto
rustls.workspace = true
sha2.workspace = true
hmac.workspace = true
aes-gcm.workspace = true

# Random
rand.workspace = true

# Utils
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true
hex.workspace = true
base64.workspace = true
regex.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# OpenTelemetry
axum-tracing-opentelemetry.workspace = true
init-tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry-appender-tracing.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
tracing-opentelemetry.workspace = true
tracing-opentelemetry-instrumentation-sdk.workspace = true

# S3
aws-sdk-s3.workspace = true
aws-config.workspace = true
aws-smithy-async.workspace = true

# API
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

# Markdown
pulldown-cmark.workspace = true

# Email
lettre.workspace = true

# Validation
validator.workspace = true

# MIME detection
mime_guess.workspace = true
infer.workspace = true

# Image processing
image.workspace = true
blurhash.workspace = true

# String matching
aho-corasick.workspace = true

# Lock-free concurrent data structures
dashmap.workspace = true

# Bitflags
bitflags.workspace = true

# Archive
zip.workspace = true

# HTTP client (matching openidconnect's reqwest version)
reqwest = { version = "0.11", features = ["json"] }

# Config
dotenvy = "0.15"
tokio-util = { version = "0.7.18", features = ["io", "compat"] }

[dev-dependencies]
tokio-test = "0.4"
serial_test = "3.2"
http-body-util = "0.1"
reqwest = { version = "0.11", features = ["json"] }

[features]
# Enable test utilities for integration tests
test-utils = []

[lints]
workspace = true

[[bin]]
name = "vc-server"
path = "src/main.rs"
