[package]
name = "vc-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "VoiceChat Desktop Client"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Internal
vc-common.workspace = true
vc-crypto.workspace = true

# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Async
tokio.workspace = true
futures.workspace = true

# WebRTC
webrtc.workspace = true

# Audio
cpal = "0.15"
opus = "0.3"
rodio = "0.19"
# nnnoiseless = "0.5"

# Serialization
serde.workspace = true
serde_json.workspace = true
base64 = "0.22"

# HTTP
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
url = "2"

# Secure Storage
keyring = "2"

# Process scanning
sysinfo = "0.30"

# Clipboard
arboard = "3"
sha2 = "0.10"

# Utils
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true

[lib]
name = "vc_client"
crate-type = ["staticlib", "cdylib", "rlib"]
