[package]
name = "vc-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "VoiceChat Desktop Client"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Internal
vc-common.workspace = true
vc-crypto.workspace = true

# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Async
tokio.workspace = true
futures.workspace = true

# WebRTC
webrtc.workspace = true

# Audio
cpal = "0.17"
opus = "0.3"
rodio = "0.21"
# nnnoiseless = "0.5"

# Serialization
serde.workspace = true
serde_json.workspace = true
base64 = "0.22"

# HTTP
reqwest = { version = "0.13", features = ["json"] }

# WebSocket
tokio-tungstenite.workspace = true
url = "2"

# Secure Storage
keyring = "2"
rusqlite = { version = "0.32", features = ["bundled"] }

# Screen capture
scap = { git = "https://github.com/Detair/scap.git", branch = "fix/linux-frame-enum" }

# Webcam capture
nokhwa = { version = "0.10", features = ["input-native"] }

# Video encoding
vpx-encode = { version = "0.3", features = ["vp9"] }

# Image encoding (thumbnails)
image = { version = "0.25", default-features = false, features = ["png"] }

# Process scanning
sysinfo = "0.34"

# Clipboard
arboard = "3"
sha2 = "0.10"

# Zeroize
zeroize.workspace = true

# Utils
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true

[lib]
name = "vc_client"
crate-type = ["staticlib", "cdylib", "rlib"]
