[package]
name = "vc-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "E2EE cryptography for VoiceChat using vodozemac (Olm/Megolm)"

[dependencies]
vodozemac.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# For key storage
zeroize = { version = "1", features = ["derive"] }

# For recovery key
bs58 = "0.5"
getrandom = "0.2"
argon2 = "0.5"
aes-gcm = "0.10"

[features]
# Megolm group-encryption sessions (not yet implemented — guarded behind a
# feature flag so that the todo!() stubs can never be reached accidentally).
megolm = []

[dev-dependencies]
rand = "0.8"

[lints]
workspace = true
